--- a/src/scss/package.json
+++ b/src/scss/package.json
@@ -12,6 +12,6 @@
       "gulp-concat": "^2.6.1",
       "gulp-rename": "^1.4.0",
       "gulp-sass": "^4.0.2",
-      "gulp-uglify-es": "^1.0.4",
+      "gulp-uglify-es": "^1.0.4"
     }
   }
